Project LedgerLink {
  database_type: 'PostgreSQL'
  Note: 'Ledger Link Database Schema'
}

Table users {
  id UUID [pk, default: `gen_random_uuid()`]
  email VARCHAR(255) [unique, not null]
  username VARCHAR(100)
  first_name VARCHAR(100)
  last_name VARCHAR(100)
  password_hash VARCHAR(255)
  is_email_verified BOOLEAN [default: false]
  role VARCHAR(50) [default: 'user']
  is_active BOOLEAN [default: true]
  last_login_at TIMESTAMP
  profile_image_url VARCHAR(500)
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table wallets {
  id UUID [pk, default: `gen_random_uuid()`]
  address VARCHAR(255) [unique, not null]
  user_id UUID [not null]
  blockchain VARCHAR(50) [default: 'ethereum']
  network VARCHAR(50) [default: 'goerli']
  is_active BOOLEAN [default: true]
  is_primary BOOLEAN [default: false]
  is_simulated BOOLEAN [default: true]
  label VARCHAR(255)
  metadata JSONB
  last_used_at TIMESTAMP
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table wallet_balances {
  id UUID [pk, default: `gen_random_uuid()`]
  wallet_id UUID [not null]
  token_symbol VARCHAR(20) [not null, default: 'ETH']
  token_address VARCHAR(255)
  balance DECIMAL(36, 18) [default: 0]
  decimals INTEGER [default: 18]
  token_name VARCHAR(100)
  is_active BOOLEAN [default: true]
  metadata JSONB
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    (wallet_id, token_symbol) [unique]
  }
}

Table transactions {
  id UUID [pk, default: `gen_random_uuid()`]
  hash VARCHAR(255) [unique, not null]
  user_id UUID [not null]
  from_address VARCHAR(255) [not null]
  to_address VARCHAR(255) [not null]
  amount DECIMAL(36, 18) [not null]
  token_address VARCHAR(255)
  status VARCHAR(50) [default: 'pending']
  is_simulated BOOLEAN [default: true]
  block_number INTEGER
  confirmations INTEGER
  gas_used DECIMAL(36, 18)
  gas_price DECIMAL(36, 18)
  transaction_fee DECIMAL(36, 18)
  data TEXT
  metadata JSONB
  description TEXT
  blockchain VARCHAR(50) [default: 'ethereum']
  network VARCHAR(50) [default: 'goerli']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Table payment_requests {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null]
  wallet_id UUID [not null]
  wallet_address VARCHAR(255) [not null]
  request_id VARCHAR(20) [unique, not null]
  description VARCHAR(500)
  amount DECIMAL(20, 8)
  token_symbol VARCHAR(20) [not null, default: 'ETH']
  status VARCHAR(20) [not null, default: 'pending']
  paid_by_user_id UUID
  transaction_id UUID
  expires_at TIMESTAMP
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
}

Ref: wallets.user_id > users.id [delete: cascade]
Ref: wallet_balances.wallet_id > wallets.id [delete: cascade]
Ref: transactions.user_id > users.id [delete: cascade]
Ref: payment_requests.user_id > users.id [delete: cascade]
Ref: payment_requests.wallet_id > wallets.id [delete: cascade]
